--- a/src/assets/game_data/Timelines (7.10)/locales/fr.json
+++ b/src/assets/game_data/Timelines (7.10)/locales/fr.json
@@ -1,4 +1,5 @@
 {
+  "{20102,2011}": "Quartiers généraux",
   "{20104,10001}": "Production de composites avancés",
   "{20104,100101}": "Extension d'anneau d'Habitat",
   "{20104,100201}": "Colonne d'anneau d'Habitat",
